--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;700;800&family=Noto+Serif:ital,wght@0,400;1,400;1,700&family=Nunito+Sans:ital,wght@0,300;0,400;0,800;1,300;1,800&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300&family=Red+Rose:wght@300;400;500;600;700&display=swap');
+
 body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Red Rose';
 }
 
 
