--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,110 @@ body {
 }
 
 
+section {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  min-height: 100%;
+  background: #ffffff;
+  overflow: hidden;
+  padding: 100px 0;
+  box-sizing: border-box;
+  /* flex-wrap: wrap; */
+}
+
+section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background:rgb(232,244,74);
+  clip-path: circle(50% at 100% -5%);
+}
+
+/* .hero-image{
+  width: 50%;
+  position: relative;
+}
+
+.hero-image::before{
+  content: "";
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left:-2rem;
+    width: 50%;
+    height: 5rem;
+    background:red;
+} */
+
+/* 
+section::after {
+  content: "";
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #47aafa;
+  clip-path: circle(35% at 0% 100%);
+} */
+
+/* section .container {
+  position: relative;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container .card {
+  position: relative;
+  width: 300px;
+  height: 400px;
+  margin: 20px 40px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background: rgb(255, 255, 255, 0.5);
+  box-shadow: 0 20px 25px rgb(0, 0, 0, 0.2);
+}
+
+.container .card .imgBox {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  transition: 5s ease-in-out;
+}
+
+.container .card:hover .imgBox {
+  transform: translateY(-100px);
+}
+
+.container .card:hover .imgBox img {
+  transform: translate(-20px, -50px), rotate(-20deg), scale(1.4);
+}
+
+.container .card .imgBox img {
+  max-width: 100%;
+  margin: 0 0 20px;
+  transition: 5s ease-in-out;
+}
+
+.container .card .imgBox h1 {
+  color: #FFFFFF;
+}
+
+.container .card .btns {
+  display: flex;
+  gap: 10px;
+  height: 80%;
+  justify-content: center;
+  align-items: center;
+} */
